[package]
name = "social-hub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "social_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Bluesky API
atrium-api = "0.24"
atrium-xrpc-client = "0.5"

# Error handling
anyhow = "1.0"

# Date and time
chrono = "0.4"

# X (Twitter) API
reqwest-oauth1 = "0.3.0"

# Keychain integration
keyring = { version = "3.6", features = ["apple-native", "sync-secret-service"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

